increasing size of popup

--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,10 @@
 <script src="main.js"></script>
 <body onload="countdown();">
-    <div style="display: flex; width:80%;
+    <div style="display: flex; width:400px;
                 justify-content:center; padding-top: 0%;">
         Time Left ::
     </div>
-    <div style="display: flex; width:80%;
+    <div style="display: flex; width:400px;
                 justify-content:center; padding-top: 0%;">
         <input id="minutes" type="text" style="width: 2%; border: none; font-size: 16px;
                       font-weight: bold; color: black;">
