--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,15 @@
 <script src="main.js"></script>
 <body onload="countdown();">
+    <div style="display: flex; width: 400px;
+                justify-content: center; padding-top: 10%;">
+                /<button onclick="delayedMessage();">Click if you want to strech</button>
+                <button onclick="clearMessage();">Stretching is lame</button>
+                
+                <div id="output"></div>
+    </div>        
     <div style="display: flex; width:400px;
                 justify-content:center; padding-top: 0%;">
-        Time Left ::
+        Stretchy Time Left ::
     </div>
     <div style="display: flex; width:400px;
                 justify-content:center; padding-top: 0%;">
