--- a/popup.html
+++ b/popup.html
@@ -2,14 +2,14 @@
 <body onload="countdown();">
     <div style="display: flex; width: 400px;
                 justify-content: center; padding-top: 10%;">
-                /<button onclick="delayedMessage();">Click if you want to strech</button>
+                <button style="padding-right: 5%;" onclick="delayedMessage();">Click if you want to strech</button>
                 <button onclick="clearMessage();">Stretching is lame</button>
                 
                 <div id="output"></div>
     </div>        
     <div style="display: flex; width:400px;
                 justify-content:center; padding-top: 0%;">
-        Stretchy Time Left ::
+        Stretchy Time Left 
     </div>
     <div style="display: flex; width:400px;
                 justify-content:center; padding-top: 0%;">
