--- a/popup.html
+++ b/popup.html
@@ -1,58 +1,24 @@
-<script>
-    var mins=.1;
-    var secs=mins*60;
-    function countdown() {
-        setTimeout('Decrement()',60);
-    }
-    function Decrement() {
-        if(document.getElementById) {
-            minutes=document.getElementById("minutes");
-            seconds=document.getElementById("seconds");
-            if(seconds<59) {
-                seconds.value=secs;
-            }
-            else {
-                minutes.value=getminutes();
-                seconds.value=getseconds();
-            }
-            if(mins<1) {
-                minutes.style.color="red";
-                seconds.style.color="red";
-            }
-            if(mins<0) {
-                alert('time up');
-                minutes.value=0;
-                seconds.value=0;
-            }
-            else {
-                secs--;
-                setTimeout('Decrement()',1000);
-            }
-        }
-    }
- 
-    function getminutes() {
-        mins=Math.floor(secs/60);
-        return mins;
-    }
- 
-    function getseconds() {
-        return secs-Math.round(mins*60);
-    }
-</script>
+<script src="main.js"></script>
 <body onload="countdown();">
-    <div style="display: flex; width:80%;
+    <div style="display: flex; width: 400px;
+                justify-content: space-between; padding-top: 10%;">
+                <button onclick="minutes();">Click if you want to strech</button>
+                <button onclick="clearMessage();">Stretching is lame</button>
+                
+                <div id="output"></div>
+    </div>        
+    <div style="display: flex; width:400px;
                 justify-content:center; padding-top: 0%;">
-        Time Left ::
+        Stretchy Time Left 
     </div>
-    <div style="display: flex; width:80%;
+    <div style="display: flex; width:400px;
                 justify-content:center; padding-top: 0%;">
-        <input id="minutes" type="text" style="width: 2%; border: none; font-size: 16px;
+        <input id="minutes" type="text" style="width: 20px; border: none; font-size: 16px;
                       font-weight: bold; color: black;">
         <font size="5">
             :
         </font>
-        <input id="seconds" type="text" style="width: 2%; border: none; font-size: 16px;
+        <input id="seconds" type="text" style="width: 20px; border: none; font-size: 16px;
                       font-weight: bold; color: black;">
     </div>
 </body>
