--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,8 @@
 <script src="main.js"></script>
-<body onload="countdown();">
+<body>
     <div style="display: flex; width: 400px;
-                justify-content: space-between; padding-top: 10%;">
-                <button onclick="minutes();">Click if you want to strech</button>
+                justify-content: space-around; padding-top: 10%;">
+                <button onclick="countdown();">Click if you want to strech</button>
                 <button onclick="clearMessage();">Stretching is lame</button>
                 
                 <div id="output"></div>
