--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,7 @@
-<script src="main.js"></script>
 <body>
     <div style="display: flex; width: 400px;
                 justify-content: space-around; padding-top: 10%;">
-                <button onclick="countdown();">Click if you want to strech</button>
+                <button onclick="setInterval();">Click if you want to strech</button>
                 <button onclick="clearMessage();">Stretching is lame</button>
                 
                 <div id="output"></div>
@@ -13,12 +12,14 @@
     </div>
     <div style="display: flex; width:400px;
                 justify-content:center; padding-top: 0%;">
-        <input id="minutes" type="text" style="width: 20px; border: none; font-size: 16px;
+                <p id="countdown"></p>
+        <!-- <input id="minutes" type="text" style="width: 20px; border: none; font-size: 16px;
                       font-weight: bold; color: black;">
         <font size="5">
             :
         </font>
         <input id="seconds" type="text" style="width: 20px; border: none; font-size: 16px;
-                      font-weight: bold; color: black;">
+                      font-weight: bold; color: black;"> -->
     </div>
 </body>
+<script src="main.js"></script>
