what the hell why not

--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,8 @@
+
 <body>
     <div style="display: flex; width: 400px;
-                justify-content: space-around; padding-top: 10%;">
+                justify-content: space-evenly; padding-top: 10%;
+                align-items: flex-start; padding-top: 20%;">
                 <button onclick="setInterval();">Click if you want to strech</button>
                 <button onclick="clearMessage();">Stretching is lame</button>
                 
@@ -22,5 +24,5 @@
         <input id="seconds" type="text" style="width: 20px; border: none; font-size: 16px;
                       font-weight: bold; color: black;"> -->
     </div>
+    <script src="main.js"></script>
 </body>
-<script src="main.js"></script>
