--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,8 @@
 
 <body>
     <div style="display: flex; width: 400px;
-                justify-content: space-evenly; padding-top: 10%;
-                align-items: flex-start; padding-top: 20%;">
+                justify-content: space-evenly;
+                align-items: flex-start; padding-top: -20%;">
                 <button onclick="setInterval();">Click if you want to strech</button>
                 <button onclick="clearMessage();">Stretching is lame</button>
                 
