--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
                 
                 <div id="output"></div>
     </div>        
-    <div style="display: flex; width:400px;
+    <div style="display: flex; width:400px; height: 200px;
                 justify-content:center; padding-top: 0%;">
         Stretchy Time Left 
         <p id="countdown"></p>
