--- a/popup.html
+++ b/popup.html
@@ -3,14 +3,14 @@
     <div style="display: flex; width: 400px;
                 justify-content: space-evenly;
                 align-items: flex-start; padding-top: 10%;">
-                <button onclick="setInterval(() => {updateCountdown()}, 1000);;">Click if you want to strech</button>
-                <!-- <button onclick="clearInterval(intervalID);">Stretching is lame</button> -->
+                <button onclick="setInterval();">Click if you want to strech</button>
+                <button onclick="youLame();">Stretching is lame</button>
                 
                 <div id="output"></div>
     </div>        
     <div style="display: flex; width:400px; height: 100px;
-                justify-content:center; padding-top: 0%;">
-         Time Left Until Stretchy
+                justify-content:center; padding-top: 50;">
+         Time Left Until
         <p id="countdown"></p>
     </div>
     <div style="display: flex; width:400px;
