--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
     </div>        
     <div style="display: flex; width:400px; height: 100px;
                 justify-content:center; padding-top: 50;">
-         Time Left Until
+         Time Left Until Stretchy Time<br />
         <p id="countdown"></p>
     </div>
     <div style="display: flex; width:400px;
