--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,11 @@
+<script src="main.js"></script>
 
 <body>
     <div style="display: flex; width: 400px;
                 justify-content: space-evenly;
                 align-items: flex-start; padding-top: 10%;">
-                <button onclick="setInterval();">Click if you want to strech</button>
-                <button onclick="youLame();">Stretching is lame</button>
+                <button onclick="setInterval()">Click if you want to strech</button>
+                <button onclick="youLame()">Stretching is lame</button>
                 
                 <div id="output"></div>
     </div>        
@@ -24,5 +25,4 @@
         <input id="seconds" type="text" style="width: 20px; border: none; font-size: 16px;
                       font-weight: bold; color: black;"> -->
     </div>
-    <script src="main.js"></script>
 </body>
