who knows again

--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,5 @@
-<script src="main.js"></script>
-
+<!DOCTYPE html>
+<html>
 <body>
     <div style="display: flex; width: 400px;
                 justify-content: space-evenly;
@@ -8,21 +8,23 @@
                 <button onclick="youLame()">Stretching is lame</button>
                 
                 <div id="output"></div>
-    </div>        
-    <div style="display: flex; width:400px; height: 100px;
+            </div>        
+            <div style="display: flex; width:400px; height: 100px;
                 justify-content:center; padding-top: 50;">
          Time Left Until Stretchy Time<br />
-        <p id="countdown"></p>
-    </div>
-    <div style="display: flex; width:400px;
+         <p id="countdown"></p>
+        </div>
+        <div style="display: flex; width:400px;
                 justify-content:center; padding-top: 0%;">
                 
-        <!-- <input id="minutes" type="text" style="width: 20px; border: none; font-size: 16px;
-                      font-weight: bold; color: black;">
-        <font size="5">
-            :
-        </font>
-        <input id="seconds" type="text" style="width: 20px; border: none; font-size: 16px;
-                      font-weight: bold; color: black;"> -->
-    </div>
+                <!-- <input id="minutes" type="text" style="width: 20px; border: none; font-size: 16px;
+                    font-weight: bold; color: black;">
+                    <font size="5">
+                        :
+                    </font>
+                    <input id="seconds" type="text" style="width: 20px; border: none; font-size: 16px;
+                    font-weight: bold; color: black;"> -->
+        </div>
 </body>
+<script src="main.js"></script>
+</html>
