--- a/popup.html
+++ b/popup.html
@@ -10,9 +10,10 @@
                 <div id="output"></div>
             </div>        
             <div style="display: flex; width:400px; height: 100px;
-                justify-content:center; padding-top: 50;">
+                justify-content:center; padding-top: 50px;">
          Time Left Until Stretchy Time<br />
-         <p id="countdown"></p>
+         <div style="display: flex; justify-content: center; text-align: center;"><p id="countdown"></p></div>
+         
         </div>
         <div style="display: flex; width:400px;
                 justify-content:center; padding-top: 0%;">
