--- a/popup.html
+++ b/popup.html
@@ -3,17 +3,17 @@
 <body>
     <div style="display: flex; width: 400px;
                 justify-content: space-evenly;
-                align-items: flex-start; padding-top: 10%;">
-                <button id="start" onclick="updateCountdown()">Try it</button>
-                <button id="video" onclick="myFunction()">Stretching is lame</button>
+                align-items: flex-start; padding-top: 10%;background-color:rgb(0, 0, 0)">
+                <button id="start">Try it</button>
+                <button id="video">Stretching is lame</button>
                 
                 <div id="output"></div>
             </div>        
-            <div style="display: flex; width:400px; height: 100px;
+            <div style="display: flex; width:400px; height: 20px;
                 justify-content:center; padding-top: 10px; font-size: 20px;background-color:rgb(0, 0, 0); color: rgb(200, 69, 212)">
          Time Left Until Stretchy Time<br />
         </div>
-        <div style="display:block; justify-content: center; text-align: center; font-size: 30px; color:tomato"><p id="countdown"></p></div>
+        <div style="display:block; justify-content: center; text-align: center; font-size: 36px; color:tomato; background-color:rgb(0, 0, 0)"><p id="countdown"></p></div>
         <div style="display: flex; width:400px;
                 justify-content:center; padding-top: 0%;">
                 
