--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,8 @@
                 justify-content:center; padding-top: 10px; font-size: 20px;background-color:rgb(0, 0, 0); color: rgb(200, 69, 212)">
          Time Left Until Stretchy Time<br />
         </div>
+        <img src="https://photos.google.com/search/_tra_/photo/AF1QipMJt0gDrMOA0Mn48lnzRFm6LW9KEFOCoy_ZpTqd"/>
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fphillip-troutman&psig=AOvVaw3fRifiYPvdDlf2VrK30Mgl&ust=1695966405717000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCODK9arNzIEDFQAAAAAdAAAAABAE" alt="philtrout"/>
         <div style="display:block; justify-content: center; text-align: center; font-size: 36px; color:tomato; background-color:rgb(0, 0, 0)"><p id="countdown"></p></div>
         <div style="display: flex; width:400px;
                 justify-content:center; padding-top: 0%;">
