did you get riid of the buttons?

--- a/popup.html
+++ b/popup.html
@@ -4,19 +4,17 @@
     <div style="display: flex; width: 400px;
                 justify-content: space-evenly;
                 align-items: flex-start; padding-top: 10%;background-color:rgb(0, 0, 0)">
-                <button id="start">Try it</button>
-                <button id="video">Stretching is lame</button>
                 
                 <div id="output"></div>
             </div>        
             <div style="display: flex; width:400px; height: 20px;
-                justify-content:center; padding-top: 10px; font-size: 20px;background-color:rgb(0, 0, 0); color: rgb(200, 69, 212)">
-         Time Left Until Stretchy Time<br />
+                justify-content:center; padding-top: 10px; font-size: 20px;border:2px :rgb(0, 0, 0); color: rgb(200, 69, 212)">
+         Time Left Until Stretchy Time
         </div>
-        <!-- <img src="https://photos.google.com/search/_tra_/photo/AF1QipMJt0gDrMOA0Mn48lnzRFm6LW9KEFOCoy_ZpTqd"/>
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fphillip-troutman&psig=AOvVaw3fRifiYPvdDlf2VrK30Mgl&ust=1695966405717000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCODK9arNzIEDFQAAAAAdAAAAABAE" alt="philtrout"/> -->
-        <img src="https://media.licdn.com/dms/image/C4D03AQG2XwBr2rylkg/profile-displayphoto-shrink_800_800/0/1572454199260?e=1701302400&v=beta&t=64W_Qvhhl5YamcQo_th0Vpm4YoKKDi9rLOTrgUasnBA"alt="phllytrout"/>
-        <div style="display:block; justify-content: center; text-align: center; font-size: 36px; color:tomato; background-color:rgb(0, 0, 0)"><p id="countdown"></p></div>
+        <div>
+        <img src="https://media.licdn.com/dms/image/C4D03AQG2XwBr2rylkg/profile-displayphoto-shrink_800_800/0/1572454199260?e=1701302400&v=beta&t=64W_Qvhhl5YamcQo_th0Vpm4YoKKDi9rLOTrgUasnBA"alt="phillytrout" style="width:400px;height:600px;" />
+        </div>
+        <div style="display:block; justify-content: center; text-align: center; font-size: 36px; color:tomato; border:2px :rgb(0, 0, 0)"><p id="countdown"></p></div>
         <div style="display: flex; width:400px;
                 justify-content:center; padding-top: 0%;">
                 
