--- a/popup.html
+++ b/popup.html
@@ -3,18 +3,18 @@
 <body>
     <div style="display: flex; width: 400px;
                 justify-content: space-evenly;
-                align-items: flex-start; padding-top: 10%;background-color:rgb(0, 0, 0)">
+                align-items: flex-start; padding-top: 10%;">
                 
                 <div id="output"></div>
             </div>        
             <div style="display: flex; width:400px; height: 20px;
-                justify-content:center; padding-top: 10px; font-size: 20px;border:2px :rgb(0, 0, 0); color: rgb(200, 69, 212)">
+                justify-content:center; padding-top: 10px; font-size: 20px; border:2px solid rgb(0, 0, 0); color: rgb(200, 69, 212)">
          Time Left Until Stretchy Time
         </div>
         <div>
-        <img src="https://media.licdn.com/dms/image/C4D03AQG2XwBr2rylkg/profile-displayphoto-shrink_800_800/0/1572454199260?e=1701302400&v=beta&t=64W_Qvhhl5YamcQo_th0Vpm4YoKKDi9rLOTrgUasnBA"alt="phillytrout" style="width:400px;height:600px;" />
+        <img src="https://media.licdn.com/dms/image/C4D03AQG2XwBr2rylkg/profile-displayphoto-shrink_800_800/0/1572454199260?e=1701302400&v=beta&t=64W_Qvhhl5YamcQo_th0Vpm4YoKKDi9rLOTrgUasnBA"alt="phillytrout" style="width:400px; height:400px;" />
         </div>
-        <div style="display:block; justify-content: center; text-align: center; font-size: 36px; color:tomato; border:2px :rgb(0, 0, 0)"><p id="countdown"></p></div>
+        <div style="display:block; justify-content: center; text-align: center; font-size: 36px; color:tomato; border:2px solid black"><p id="countdown"></p></div>
         <div style="display: flex; width:400px;
                 justify-content:center; padding-top: 0%;">
                 
