--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
                 <div id="output"></div>
             </div>        
             <div style="display: flex; width:400px; height: 20px;
-                justify-content:center; padding-top: 10px; font-size: 20px; border:2px solid rgb(0, 0, 0); color: rgb(200, 69, 212)">
+                justify-content:center; padding-top: 10px; padding-bottom: 10px; border:2px solid rgb(0, 0, 0); color: rgb(200, 69, 212)">
          Time Left Until Stretchy Time
         </div>
         <div>
