--- a/popup.html
+++ b/popup.html
@@ -8,13 +8,13 @@
                 <div id="output"></div>
             </div>        
             <div style="display: flex; width:400px; height: 20px;
-                justify-content:center; padding-top: 10px; padding-bottom: 10px; border:2px solid rgb(0, 0, 0); color: rgb(200, 69, 212)">
+                justify-content:center; padding-top: 10px; padding-bottom: 10px; font-size: 30px; color: rgb(15, 49, 129)">
          Time Left Until Stretchy Time
         </div>
         <div>
         <img src="https://media.licdn.com/dms/image/C4D03AQG2XwBr2rylkg/profile-displayphoto-shrink_800_800/0/1572454199260?e=1701302400&v=beta&t=64W_Qvhhl5YamcQo_th0Vpm4YoKKDi9rLOTrgUasnBA"alt="phillytrout" style="width:400px; height:400px;" />
         </div>
-        <div style="display:block; justify-content: center; text-align: center; font-size: 36px; color:tomato; border:2px solid black"><p id="countdown"></p></div>
+        <div style="display:block; justify-content: center; text-align: center; font-size: 36px; color:rgb(228, 36, 3); "><p id="countdown"></p></div>
         <div style="display: flex; width:400px;
                 justify-content:center; padding-top: 0%;">
                 
