--- a/popup.html
+++ b/popup.html
@@ -7,9 +7,9 @@
                 
                 <div id="output"></div>
             </div>        
-            <div style="display: flex; width:400px; height: 20px;
+            <div style="display: flex; width:400px; flex-wrap: wrap; height: 20px;
                 justify-content:center; padding-top: 10px; padding-bottom: 30px; font-size: 30px; color: rgb(15, 49, 129)">
-         Time Left Until Stretchy Time
+         OK, everyone, unmute your mics and all together now "Time for Stretchies!!!"
         </div>
         <div>
         <img src="https://media.licdn.com/dms/image/C4D03AQG2XwBr2rylkg/profile-displayphoto-shrink_800_800/0/1572454199260?e=1701302400&v=beta&t=64W_Qvhhl5YamcQo_th0Vpm4YoKKDi9rLOTrgUasnBA"alt="phillytrout" style="width:400px; height:400px;" />
