--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
                 justify-content:center; padding-top: 10px; padding-bottom: 100px; text-align: center; font-size: 30px; color: rgb(15, 49, 129)">
          OK, everyone, unmute your mics and all together now: "Time for Stretchies!!!"
         </div>
-        <div style="justify-content: center;">
+        <div style="align-items: center;">
         <img src="https://media.licdn.com/dms/image/C4D03AQG2XwBr2rylkg/profile-displayphoto-shrink_800_800/0/1572454199260?e=1701302400&v=beta&t=64W_Qvhhl5YamcQo_th0Vpm4YoKKDi9rLOTrgUasnBA"alt="phillytrout" style="width:320px; height:320px;" />
         </div>
         <div style="display:block; justify-content: center; text-align: center; font-size: 50px; color:rgb(228, 36, 3); "><p id="countdown"></p></div>
