--- a/popup.html
+++ b/popup.html
@@ -12,20 +12,13 @@
          OK, everyone, unmute your mics and all together now: "Time for Stretchies!!!"
         </div>
         <div style="width: 400px; align-items: center; justify-content: center;">
-        <img src="https://media.licdn.com/dms/image/C4D03AQG2XwBr2rylkg/profile-displayphoto-shrink_800_800/0/1572454199260?e=1701302400&v=beta&t=64W_Qvhhl5YamcQo_th0Vpm4YoKKDi9rLOTrgUasnBA"alt="phillytrout" style="width:320px; height:320px;" />
+        <img src="https://media.licdn.com/dms/image/C4D03AQG2XwBr2rylkg/profile-displayphoto-shrink_800_800/0/1572454199260?e=1701302400&v=beta&t=64W_Qvhhl5YamcQo_th0Vpm4YoKKDi9rLOTrgUasnBA"alt="phillytrout" style="width:400px; height:400px;" />
         </div>
         <div style="display:block; justify-content: center; text-align: center; font-size: 50px; color:rgb(228, 36, 3); "><p id="countdown"></p></div>
-        <div style="display: flex; width:400px; height: 50px;
+        <!-- <div style="display: flex; width:400px; height: 50px;
                 justify-content:center; padding-top: 0%;">
                 
-                <!-- <input id="minutes" type="text" style="width: 20px; border: none; font-size: 16px;
-                    font-weight: bold; color: black;">
-                    <font size="5">
-                        :
-                    </font>
-                    <input id="seconds" type="text" style="width: 20px; border: none; font-size: 16px;
-                    font-weight: bold; color: black;"> -->
-        </div>
+        </div> -->
 </body>
 <script src="main.js"></script>
 </html>
