--- a/popup.html
+++ b/popup.html
@@ -15,10 +15,8 @@
         <img src="https://media.licdn.com/dms/image/C4D03AQG2XwBr2rylkg/profile-displayphoto-shrink_800_800/0/1572454199260?e=1701302400&v=beta&t=64W_Qvhhl5YamcQo_th0Vpm4YoKKDi9rLOTrgUasnBA"alt="phillytrout" style="width:400px; height:400px;" />
         </div>
         <div style="display:block; justify-content: center; text-align: center; font-size: 50px; color:rgb(228, 36, 3); "><p id="countdown"></p></div>
-        <!-- <div style="display: flex; width:400px; height: 50px;
-                justify-content:center; padding-top: 0%;">
-                
-        </div> -->
+        <div id="stretches">Stretches:<br /></div>
 </body>
-<script src="main.js"></script>
 </html>
+<script src="main.js"></script>
+<script src="jquery.min.js"></script>
