--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
          OK, everyone, unmute your mics and all together now: "Time for Stretchies!!!"
         </div>
         <div style="width: 400px; align-items: center; justify-content: center;">
-        <img src="https://media.licdn.com/dms/image/C4D03AQG2XwBr2rylkg/profile-displayphoto-shrink_800_800/0/1572454199260?e=1701302400&v=beta&t=64W_Qvhhl5YamcQo_th0Vpm4YoKKDi9rLOTrgUasnBA"alt="phillytrout" style="width:400px; height:400px;" />
+        <img src="https://media.licdn.com/dms/image/C4D03AQG2XwBr2rylkg/profile-displayphoto-shrink_800_800/0/1572454199260?e=1701302400&v=beta&t=64W_Qvhhl5YamcQo_th0Vpm4YoKKDi9rLOTrgUasnBA"alt="phillytrout" class="rotate"; style="width:300px; height:300px; animation: rotation 8s infinite linear;" />
         </div>
         <div style="display:block; justify-content: center; text-align: center; font-size: 50px; color:rgb(228, 36, 3); "><p id="countdown"></p></div>
         <div id="stretches"></div>
