--- a/popup.html
+++ b/popup.html
@@ -7,17 +7,19 @@
                 
                 <div id="output"></div>
             </div>        
-            <div style="display: flex; width:400px; flex-wrap: wrap; height: 20px;
+            <div class="intro" style="display: flex; width:400px; flex-wrap: wrap; height: 20px;
                 justify-content:center; padding-bottom: 120px; text-align: center; font-size: 30px; color: rgb(15, 49, 129)">
          OK, everyone, unmute your mics and all together now: "Time for Stretchies!!!"
+         &#128582; &#128582;
         </div>
         <div style="width: 400px; align-items: center; justify-content: center;">
-        <img src="https://media.licdn.com/dms/image/C4D03AQG2XwBr2rylkg/profile-displayphoto-shrink_800_800/0/1572454199260?e=1701302400&v=beta&t=64W_Qvhhl5YamcQo_th0Vpm4YoKKDi9rLOTrgUasnBA"alt="phillytrout" class="rotate"; style="width:400px; height:400px; animation: rotation 8s infinite linear;" />
+        <img src="https://media.licdn.com/dms/image/C4D03AQG2XwBr2rylkg/profile-displayphoto-shrink_800_800/0/1572454199260?e=1701302400&v=beta&t=64W_Qvhhl5YamcQo_th0Vpm4YoKKDi9rLOTrgUasnBA"alt="phillytrout" class="rotate" style="width:300px; height:300px; padding-left: 50px;" />
         </div>
+    
         <div style="display:block; justify-content: center; text-align: center; font-size: 50px; color:rgb(228, 36, 3); "><p id="countdown"></p></div>
         <div id="stretches"></div>
 </body>
 </html>
 <script src="main.js"></script>
-<script src="styles.css" type="styles"></script>
+<link href="styles.css" rel="stylesheet" type="text/css"></link>
 <script src="jquery.min.js"></script>
